--- a/maintitle/templates/authors_title.html
+++ b/maintitle/templates/authors_title.html
@@ -9,7 +9,7 @@
 
 <ul>
     {%for author in authors%}
-    <li><a href="/authors/{{author.author}}">{{author.author}}</a></li>
+    <li><a href="/authors/{{author.id_author}}">{{author.author}}</a></li>
     {%endfor%}
 </ul>
 
