--- a/maintitle/templates/book_title.html
+++ b/maintitle/templates/book_title.html
@@ -14,7 +14,7 @@
 <form action="/books/">
     <input type="submit" value="Все книги" />
 </form>
-<form action="/authors/{{book_author}}">
+<form action="/authors/{{id_author}}">
     <input type="submit" value="К странице автора" />
 </form>
 </body>
