--- a/maintitle/templates/books_title.html
+++ b/maintitle/templates/books_title.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         {%for book in books%}
-        <li><a href ='/books/{{book.book_name}}/'>{{book}}</a></li>
+        <li><a href ='/books/{{book.id_book}}/'>{{book}}</a></li>
         {%endfor%}
     </ul>
 <form action="/">
