--- a/maintitle/templates/author_title.html
+++ b/maintitle/templates/author_title.html
@@ -15,7 +15,7 @@
     <h2>Все книги автора:</h2>
     <ul>
         {%for book in books%}
-        <li><a href="/books/{{book.book_name}}">{{book.book_name}}</a></li>
+        <li><a href="/books/{{book.id_book}}">{{book.book_name}}</a></li>
         {%endfor%}
     </ul>
 </div>
